# mpc-hc

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  CONTRIBUTING.md  Compilation.txt  Readme.md  Readme.txt  Version.sh  appveyor.yml  build.bat  build_2010.bat  build_vs2012.bat  common.bat  filters.sln  filters_2010.sln  hash2rev.sh  moreuuids.patch  mpc-hc.sln  mpc-hc_2010.sln  mpc-hc_vs2005.sln  mpc-hc_vs2012.sln  mpciconlib.sln  mpciconlib_2010.sln  mpciconlib_vs2012.sln  mpcresources.sln  mpcresources_2010.sln  mpcresources_vs2012.sln  rev2hash.sh  update_version.bat  version.sh  version.txt
contrib/: astyle.ini  checkyear.js  checkyear.sh  coverity.bat  coverty.bat  hash2rev.sh  icl13.diff  mpc-hc-covbuild.bat  mpc-hc.cppcheck  pre-commit.sh  rev2hash.sh  run_astyle.bat  sign.bat
distrib/: custom_messages.iss  custom_messages_translated.iss  innosetup_cpu_detection.iss  mpc-hc_setup.iss  mpc-home_x64.iss  mpc-home_x86.iss  unrar_license.txt
distrib/Languages/: Arabic.isl  Armenian.islu  Belarus.isl  Belarusian.isl  Bengali.islu  Bosnian.isl  BrazilianPortuguese.isl  Bulgarian.isl  ChineseSimp.isl  ChineseSimplified.isl  ChineseTrad.isl  Croatian.isl  EnglishBritish.isl  Esperanto.isl  Galician.isl  Hungarian.isl  Indonesian.isl  Korean.isl  Lithuanian.isl  Malaysian.isl  Romanian.isl  Slovak.isl  Swedish.isl  Tatar.isl  Thai.isl  Turkish.isl  Ukrainian.isl  Vietnamese.isl
distrib/Shaders/: 0-255 to 16-235.psh  16-235 to 0-255 [SD].psh  16-235 to 0-255 [SD][HD].psh  BT.601 to BT.709.psh  LCD angle correction.psh  YV12 Chroma Upsampling.psh  contour.psh  deinterlace (blend).psh  denoise.psh  edge sharpen.psh  emboss.psh  grayscale.psh  invert.psh  letterbox.psh  nightvision.psh  procamp.psh  sharpen complex 2.psh  sharpen complex.psh  sharpen.psh  sphere.psh  spotlight.psh  wave.psh
docs/: Authors.txt  Changelog.txt  Changelog_old.txt  Compilation.md  Compilation.txt  Readme.txt  Release.md  Release.txt  Submodules.md  Submodules.txt  Todo.md  Todo.txt  astyle.bat  astyle.ini  mpc-hc.cppcheck  run_astyle.bat
docs/patches/: analyze.patch  checkyear.js  icl12.diff  icl12.patch  icl13.diff  ltcg.patch  vs2012.diff  vs2012.patch
enc_temp_folder/5faa45f2592f3a6cf8cd39df44b81270/: MainFrm.cpp
include/: FilterInterfaces.h  IBitRateInfo.h  IBufferInfo.h  IChapterInfo.h  IFilterVersion.h  IKeyFrameInfo.h  IMPCVideoDecFilter.h  ITrackInfo.h  MediaInfoDLL.h  SubRenderIntf.h  SubWCRev.conf  SubWCRev.h  UserConfig.h  Utf8.h  Version.h  Version_rev.h.in  inttypes.h  libdivide.h  moreuuids.h  mpc-hc_config.h  mvrInterfaces.h  qedit.h  stdafx_common.h  stdafx_common_afx.h  stdafx_common_afx2.h  stdafx_common_dshow.h  stdint.h  unrar.h  version.h
include/MediaInfo/: MediaInfoDLL.h
include/atl/: atlcache.h  atlcrypt.h  atlcrypt.inl  atlextmgmt.h  atlhtml.h  atlhttp.h  atlhttp.inl  atlisapi.h  atlmime.h  atlperf.h  atlperf.inl  atlrx.h  atlserr.h  atlsession.h  atlsharedsvc.h  atlsiface.h  atlsmtpconnection.h  atlsmtputil.h  atlsoap.h  atlspriv.h  atlspriv.inl  atlsrv.rc  atlsrvres.h  atlstencil.h  readme.txt
include/avisynth/: avisynth1.h  avisynth25.h
include/aviutl/: filter.h
include/base64/: base64.h
include/detours/: detours.h
include/dsm/: dsm.h  dsm.txt
include/dx/: d3d.h  d3d8.h  d3d8types.h  d3dcaps.h  d3drm.h  d3drmdef.h  d3drmobj.h  d3dtypes.h  dxtrans.h
include/include/: IFilterVersion.h
include/lglcd/: lglcd.h
include/ogg/: ogg.h  os_types.h
include/qt/: ADSP.h  ADSPSecure.h  AE.h  AEDataModel.h  AEHelpers.h  AEInteraction.h  AEMach.h  AEObjects.h  AEPackObject.h  AERegistry.h  AEUserTermTypes.h  AGP.h  AIFF.h  ASDebugging.h  ASRegistry.h  ATA.h  ATS.h  ATSFont.h  ATSLayoutTypes.h  ATSTypes.h  ATSUnicode.h  ATSUnicodeDirectAccess.h  ATSUnicodeFlattening.h  AVComponents.h  AVLTree.h  Aliases.h  Appearance.h  AppleDiskPartitions.h  AppleEvents.h  AppleGuide.h  AppleHelp.h  AppleScript.h  AppleTalk.h  ApplicationServices.h  AssertMacros.h  AvailabilityMacros.h  (+389 more)
lib/: detours.lib  lgLcd.lib
lib64/: lgLcd.lib
locale/: README  german.diff
src/: YASM.bat  YASM.props  YASM.rules  YASM.targets  YASM.xml  common-3rd-party.props  common.props  common.vsprops  debug.props  debug.vsprops  platform.props  release.props  release.vsprops
src/filters/parser/diracsplitter/libdirac/libdirac_common/: Makefile.am  Makefile.in  arith_codec.cpp  arith_codec.h  arrays.h  band_codec.cpp  band_codec.h  band_vlc.cpp  band_vlc.h  bit_manager.cpp  bit_manager.h  cmd_line.cpp  cmd_line.h  common.cpp  common.h  common_types.h  dirac_assertions.cpp  dirac_assertions.h  dirac_exception.cpp  dirac_exception.h  dirac_inttypes.h  dirac_types.h  frame.cpp  frame.h  frame_buffer.cpp  frame_buffer.h  golomb.cpp  golomb.h  mot_comp.cpp  mot_comp.h  mot_comp_mmx.cpp  mot_comp_mmx.h  motion.cpp  motion.h  mv_codec.cpp  mv_codec.h  pic_io.cpp  pic_io.h  picture.h  upconvert.cpp  (+7 more)
src/filters/parser/diracsplitter/libdirac/libdirac_decoder/: Makefile.am  Makefile.in  comp_decompress.cpp  comp_decompress.h  decoder_types.h  dirac_cppparser.cpp  dirac_cppparser.h  dirac_parser.cpp  dirac_parser.h  frame_decompress.cpp  frame_decompress.h  seq_decompress.cpp  seq_decompress.h
src/filters/parser/diracsplitter/libdirac/libdirac_encoder/: Makefile.am  Makefile.in  comp_compress.cpp  comp_compress.h  dirac_encoder.cpp  dirac_encoder.h  enc_picture.h  frame_compress.cpp  frame_compress.h  picture_compress.h  prefilter.cpp  quality_monitor.cpp  quality_monitor.h  quant_chooser.cpp  quant_chooser.h  rate_control.cpp  rate_control.h  seq_compress.cpp  seq_compress.h
src/filters/parser/diracsplitter/libdirac/libdirac_motionest/: Makefile.am  Makefile.in  block_match.cpp  block_match.h  downconvert.cpp  downconvert.h  downconvert_mmx.cpp  me_mode_decn.cpp  me_mode_decn.h  me_subpel.cpp  me_subpel.h  me_utils.cpp  me_utils.h  me_utils_mmx.cpp  me_utils_mmx.h  motion_estimate.cpp  motion_estimate.h  pixel_match.cpp  pixel_match.h
test/: test1txt  test2txt
test_for_sf_staff/: Compilation.txt  filters.sln  mpciconlib.sln  mpcresources.sln  update_version.bat
(+5725 files in other folders)
